<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="shutdown"
            android:text="@string/shutdown" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/black" />

        <Button
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="reboot"
            android:text="@string/reboot" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/fw"
            android:onClick="forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/left"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/forward" />

        <Button
            android:id="@+id/right"
            android:onClick="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bw"
            android:layout_toRightOf="@+id/fw"
            android:text="@string/right" />

        <Button
            android:id="@+id/left"
            android:onClick="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bw"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="66dp"
            android:text="@string/left" />

        <Button
            android:id="@+id/bw"
            android:onClick="backward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/fw"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="140dp"
            android:text="@string/backward" />

    </RelativeLayout>

</LinearLayout>